@@ -37,6 +37,7 @@ PHP                                                                        NEWS
   . Fixed bug #74519 (strange behavior of AppendIterator). (jhdxr)
 
 - Standard:
+  . Fixed bug #75961 (Strange references behavior). (Laruence)
   . Fixed bug #75916 (DNS_CAA record results contain garbage). (Mike, 
     Philip Sharp)
 
